<resources>
    <string name="app_name">ContactosApp</string>
    <string name="password">Password</string>
    <string name="titleApp">Welcome to the system contact</string>
    <string name="user">User/Email</string>
    <string name="register">Register</string>
    <string name="recover">Recover Password</string>
    <string name="checkboxText">Remember me</string>

    <string name="textViewUserId_label">User Id:</string>
    <string name="textViewFirstName_label">First Name:</string>
    <string name="textViewLastName_label">Last Name:</string>
    <string name="textViewPhoneNumber_label">Phone Number:</string>
    <string name="textViewEmailAddress_label">Email Address:</string>
    <string name="buttonSave_label">Save</string>
    <string name="buttonView_label">View</string>
    <string name="buttonUpdate_label">Update</string>
    <string name="buttonDelete_label">Delete</string>
    <string name="textViewLastName_texto">Last Name</string>
    <string name="textViewFirstName_texto">First Name</string>
    <string name="textViewPhoneNumber_texto">Phone Number</string>
    <string name="textViewEmailAddress_texto">Email Address</string>
</resources>